# hegemony

client/: Cargo.toml
client/assets/: col.aseprite  row.aseprite
client/src/: lib.rs  main.rs  map.rs  ui.rs
client/src/dojo/: dojo.rs  mod.rs
client/src/map/: map.rs
contracts/: Scarb.toml
contracts/src/: actions.cairo  models.cairo
