[package]
edition = "2021"
name = "hegemony"
version = "0.1.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
anyhow = "1.0.66"
bevy = "0.12"
bevy-tokio-tasks = "0.11.0"
bevy_flycam = "0.12.0"
parking_lot = "0.12.1"
starknet = "0.7.0"
tokio = { version = "1.33.0", features = ["full"] }
rand = "0.8.5"
bevy_ecs_tilemap = {git = "https://github.com/divark/bevy_ecs_tilemap.git", branch = "0.12-fixes"}

dojo-types = { git = "https://github.com/dojoengine/dojo", tag = "v0.3.12"}
torii-client = { git = "https://github.com/dojoengine/dojo", tag = "v0.3.12" }

url = "2.4.1"
